<resources>
    <string name="app_name">JMC Economics</string>
    <string name="retry">Retry</string>
    <string name="post_Error">An error occurred while loading the posts</string>
    <string name="search">Search</string>
    <string name="contrarian">The Contrarian</string>
    <string name="resources">RESOURCES</string>
    <string name="darkmode">Dark Mode</string>
    <string name="lightmode">Light Mode</string>
    <string name="hi">Hi!</string>
    <string name="contact">For any query, contact JMC Economics Department</string>
    <string name="tab_text_1">First Semester</string>
    <string name="tab_text_2">Second Semester</string>
    <string name="tab_text_3">Third Semester</string>
    <string name="tab_text_4">Fourth Semester</string>
    <string name="tab_text_5">Fifth Semester</string>
    <string name="tab_text_6">Sixth Semester</string>

</resources>
